[package]
name = "eths"
version = "0.1.0"
edition = "2021"
authors = ["Patricio Napoli"]

[dependencies]
argh = "0.1.12"
csv = "1.3.0"
futures = "0.3.30"
rand = "0.8.5"
rand_chacha = "0.3.1"
reth-eth-wire = { git = "https://github.com/paradigmxyz/reth"}
reth-ecies = { git = "https://github.com/paradigmxyz/reth" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth"}
# Version needs to match reth's secp256k1, see https://github.com/paradigmxyz/reth/blob/main/Cargo.toml#L336
secp256k1 = { version = "0.27.0", features = ["rand", "global-context", "recovery"] }
serde = "1.0.197"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "net", "macros", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
